[gd_scene load_steps=10 format=2]

[ext_resource path="res://assets/assets_Botanica/Botanica_Title.jpg" type="Texture" id=1]
[ext_resource path="res://fonts/Righteous-Regular.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://assets/Botones/jugar2.png" type="Texture" id=3]
[ext_resource path="res://SFX/3.1. mouse-click1.ogg" type="AudioStream" id=4]
[ext_resource path="res://juego_Botanica/HUDs/BotanicaTitle.gd" type="Script" id=5]
[ext_resource path="res://assets/iconos/help.png" type="Texture" id=6]
[ext_resource path="res://assets/iconos/atras.png" type="Texture" id=7]
[ext_resource path="res://assets/assets_Botanica/BotanicaSounds/titlescreen_Botanica.wav" type="AudioStream" id=8]

[sub_resource type="DynamicFont" id=1]
size = 75
outline_size = 2
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 2 )

[node name="Titlescreen" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 5 )

[node name="TextureRect" type="TextureRect" parent="."]
margin_right = 1024.0
margin_bottom = 598.0
texture = ExtResource( 1 )
expand = true

[node name="Title" type="Label" parent="."]
margin_left = 376.0
margin_top = 244.0
margin_right = 692.0
margin_bottom = 356.0
custom_fonts/font = SubResource( 1 )
text = "Botanica"
align = 1

[node name="Jugar" type="TextureButton" parent="."]
margin_left = 421.0
margin_top = 357.0
margin_right = 670.0
margin_bottom = 469.0
rect_scale = Vector2( 0.8, 0.8 )
texture_normal = ExtResource( 3 )

[node name="Instrucciones" type="TextureButton" parent="."]
margin_left = 890.0
margin_top = 32.0
margin_right = 990.0
margin_bottom = 132.0
texture_normal = ExtResource( 6 )

[node name="Back" type="TextureButton" parent="."]
margin_left = 24.0
margin_top = 20.0
margin_right = 102.0
margin_bottom = 111.0
texture_normal = ExtResource( 7 )

[node name="Click" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 4 )
volume_db = 3.025

[node name="BackSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 8 )
volume_db = -23.597

[connection signal="pressed" from="Jugar" to="." method="_on_Jugar_pressed"]
[connection signal="pressed" from="Instrucciones" to="." method="_on_Instrucciones_pressed"]
[connection signal="pressed" from="Back" to="." method="_on_Back_pressed"]
